# pycaliper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cacheline_nru_synth.py  demo_btor.py  pycmain.py  pyproject.toml  quickstart.py  refinement_script.py  reg_en_btor.py  requirements.txt  sdram_trace_sampler.py  tage_btor.py  tage_jg.py
designs/adder/: config.json
designs/counter/: config.json
designs/dawg/: config.json  config_nru.json
designs/demo/: config.json  demo.sv
designs/regblock/: config.json  regblock.v
designs/sdram/: config.json  config_cover.json  design.lst  sdram.tcl  two_trace.sv
designs/tage/: config.json  config_boundary.json  tage_predictor.btor
docs/: .gitignore  conf.py  index.rst  make_html.sh  proofmanager_guide.rst  quickstart.rst  readme_temp.md  setup_guide.rst  sphinxtogithub.py
docs/_templates/custom/: sidebar.html
docs/api/: modules.rst
examples/designs/adder/: adder.sv  config.json
examples/designs/counter/: config.json
myspecs/: cacheline_nru.py  cacheline_plru.py  demo.py  refinement.py  regblock.py  tage.py  top.py
pycaliper/: proofmanager.py  propns.py  pycconfig.py  pycgui.py  pycmain.py  pycmanager.py  pycsetup.py  svagen.py  vcdutils.py
pycaliper/btorinterface/: btordesign.py  pycbtorinterface.py  pycbtorsymex.py  vcdgenerator.py
pycaliper/frontend/: pycast.py  pycgen.py
pycaliper/jginterface/: hierarchyexplorer.py  jgdesign.py  jgoracle.py  jgsetup.py
pycaliper/per/: __init__.py  expr.py  per.py
pycaliper/synth/: __init__.py  alignsynthesis.py  btorsynthesizer.py  iis_strategy.py  persynthesis.py  synthprog.py  tracesampler.py
pycaliper/verif/: btorverifier.py  invverifier.py  jgverifier.py  mmrverifier.py  refinementverifier.py
specs/: adder.py  counter.py  refiner_modules.py  regblock.py  regblock_syn.py
templates/: index.html
tests/: test.py
tests/specs/: adder.py  array_nonzerobase.py  counter.py  demo.py  regblock.py  regblock_syn.py
(+16 files in other folders)
